...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mmt-tJ-2sd">
                                <rect key="frame" x="0.0" y="88" width="414" height="704"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="BlockCell" rowHeight="183" id="nz6-Pb-2Kv" customClass="BlockCell" customModule="BlockOne" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="28" width="414" height="183"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nz6-Pb-2Kv" id="y1y-vT-oGt">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="182.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
...
                                    <constraint firstAttribute="width" constant="100" id="aYg-lS-3ad"/>
                                </constraints>
                            </activityIndicatorView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wNe-cU-ol3">
                                <rect key="frame" x="117" y="812" width="180" height="30"/>
                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="RefreshButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="180" id="lG9-UN-BFV"/>
                                </constraints>
                                <state key="normal" title="Refresh Recent Blocks">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nul
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="RawView"/>
                                <constraints>
                                    <constraint firstItem="C2C-au-vgu" firstAttribute="top" secondItem="FYg-2L-CFf" secondAttribute="top" constant="10" id="6sW-9w-f8v"/>
                                    <constraint firstItem="C2C-au-vgu" firstAttribute="leading" secondItem="FYg-2L-CFf" secondAttribute="leading" constant="10" id="aYG-gg-6Kc"/>
                                    <constraint firstAttribute="trailing" secondItem="C2C-au-vgu" secondAttribute="trailing" constant="10" id="bsi-U1-0JY"/>
                                    <constraint firstAttribute="bottom" secondItem="C2C-au-vgu" secondAttribute="bottom" constant="10" id="d39-7K-5V0"/>
                                </constraints>
...
                                                </constraints>
                                            </view>
                                        </subviews>
                                    </stackView>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="PrettyView"/>
                                <constraints>
                                    <constraint firstItem="79t-e1-GV6" firstAttribute="centerY" secondItem="Fl6-vj-ouK" secondAttribute="centerY" id="VJ8-IP-hNr"/>
                                    <constraint firstItem="79t-e1-GV6" firstAttribute="centerX" secondItem="Fl6-vj-ouK" secondAttribute="centerX" id="cu1-MF-lYe"/>
                                    <constraint firstItem="79t-e1-GV6" firstAttribute="leading" secondItem="Fl6-vj-ouK" secondAttribute="leading" constant="20" id="hgH-iR-Y9V"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9QB-Zx-CFa">
                                <rect key="frame" x="117" y="811" width="180" height="30"/>
                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="ToggleViewStateButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="180" id="bsT-ip-J9k"/>
                                </constraints>
                                <state key="normal" title="Show Raw JSON">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="didTapToggleViewStateButton:" destination="QRH-RK-ooW" eventType="touchUpInside" id="1IP-G2-W12"/>
                                </connections>
                            </button>
...
